# OnDeviceTraining-base-project

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  README.md  cmake_install.cmake  devenv.nix  main.py  pyproject.toml
cmake/: build_targets.cmake
cmake/host/: host_post.cmake  host_pre.cmake
cmake/host/src/: debug_lib.c  hardware_init.c
cmake/pico/: pico_post.cmake  pico_pre.cmake
cmake/pico/src/: debug_lib.c  hardware_init.c
cmake/pico/targets/: pico1.cmake  pico2w.cmake
cmake/stm32cubemx/stm32f756xg/: CMakeLists.txt  STM32F756XX_FLASH.ld
cmake/stm32cubemx/stm32f756xg/Core/Inc/: eth.h  i2c.h  init.h  usart.h  usb_otg.h
cmake/stm32cubemx/stm32f756xg/Core/Src/: debug_lib.c  eth.c  i2c.c  init.c  retarget.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c
cmake/stm32cubemx/stm32f756xg/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/stm32f756xg/cmake/stm32cubemx/: CMakeLists.txt
cmake/stm32cubemx/stm32l476xg/: CMakeLists.txt
cmake/stm32cubemx/stm32l476xg/Core/Inc/: gpio.h  init.h  usart.h
cmake/stm32cubemx/stm32l476xg/Core/Src/: debug_lib.c  init.c  retarget.c  stm32l4xx_hal_msp.c
cmake/stm32cubemx/stm32l476xg/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/stm32l476xg/cmake/stm32cubemx/: CMakeLists.txt
cmake/stm32cubemx/stm32l4r5zi/: CMakeLists.txt
cmake/stm32cubemx/stm32l4r5zi/Core/Inc/: init.h  usart.h
cmake/stm32cubemx/stm32l4r5zi/Core/Src/: debug_lib.c  gpio.c  init.c  retarget.c  stm32l4xx_it.c  usart.c  usb_otg.c
cmake/stm32cubemx/stm32l4r5zi/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/stm32l4r5zi/cmake/stm32cubemx/: CMakeLists.txt
docs/: odt-userapi-findings-misc.md  phase5e-failures.md
docs/superpowers/plans/: 2026-04-19-examples-completion.md
docs/superpowers/specs/: 2026-04-19-odt-userapi-audit-workflow-design.md
scripts/: run-parity-check.sh
src/: main.c
src/examples/: linear_regression.c  mlp_mnist_asym_host.c  mlp_mnist_asym_mcu.c  mlp_mnist_depth_sweep_host.c  mlp_mnist_float32_host.c  mlp_mnist_float32_mcu.c  mlp_mnist_stress_host.c  mnist_inference.c
src/examples/data/: generate_subset.py  mnist_pretrained_float32.h  mnist_test_subset.h  mnist_train_subset.h
src/examples/reference/: README.md  compare.py  depth_sweep_ref.py  mlp_mnist_float32_host_ref.py  mlp_mnist_float32_mcu_ref.py  mlp_mnist_stress_host_ref.py  plot_runs.py  state_dump_compare.py
src/include/: debug_lib.h  hardware_init.h
